--- a/style.css
+++ b/style.css
@@ -875,3 +875,6 @@ footer p {
 .answer:nth-of-type(4) {
     background-image: url(img/icon_wrong3.svg);
 }
+.horizontal{
+    background-color: lightblue;
+}
