--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
  @font-face {
     font-family: 'TmoneyRoundWindRegular';
     src: url('01_otf/TmoneyRoundWindRegular.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: bolder;
+    font-style: bold;
 }
 
 :root {
@@ -239,11 +239,12 @@ nav {
     top: 50%;
     left: 3.1%;
     transform: translateY(-50%);
-    background-color:rgba(222, 222, 222, 0.8); /* Optional: to make the background of the nav a bit transparent */
-    padding: 15px;
+   /* background-color:rgba(222, 222, 222, 0.8);*/ /* Optional: to make the background of the nav a bit transparent */
+   background-color:rgba(255, 255, 255, 0.744); 
+   padding: 15px;
     border-radius: 10px 10px 10px 10px; /* Optional: rounded corners */
     z-index: 5;
-    box-shadow: #333;
+    box-shadow:  0px 4px 20px #676767;
     
 }
 
@@ -710,8 +711,15 @@ section.mainpage {
     color: #fff; /* White text */
     padding: 50px 0;
 }
+section.mainpage.ul{
+    text-align: left;
+    color:black;
+    left:0%;
+    margin-right: 1000px;
+    margin-top: 100px;
+}
 .orangeright {
-    width: 1200px; /* Width of the orange rectangle */
+    width: 1000px; /* Width of the orange rectangle */
     height: 60%; /* Make it as tall as the section */
     background-color: #FF9900; /* Orange background */
     position: absolute; /* Position it absolutely within the section */
@@ -822,11 +830,21 @@ section.contact {
 
 .contact p {
     font-style: bold;
+    font-weight: bolder;
     margin: 40px 100px;
     margin-left:180px;
     margin-top:205px;
     font-size: 25px;
     text-align: left;
+}
+.contact ul {
+    font-style: bold;
+    font-weight: bolder;
+    margin-right:60px;
+   margin-top: 20px;
+    font-size: 20px;
+    text-align: right;
+    z-index: 3;
 }
 footer {
     width: 105%;
