--- a/style.css
+++ b/style.css
@@ -617,6 +617,64 @@ body {
             text-align: right;
             z-index: 3;
         }
+
+/*CHARTINTRO*/
+section.chartintro {
+    background: #FFC47F;
+    width: 100%; /* Adjust as needed */
+    height: 100%; /* Adjust as needed */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .content-layer {
+    width: 80%; /* Adjust as needed */
+    height: auto; /* Adjust as needed */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 35px;
+    background: rgba(255, 255, 255, 0.28); /* 반투명한 흰색 배경 */
+    padding: 20px;
+    margin-left: 50px ;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+  .text-content {
+    display: flex;
+    justify-content: space-between; /* Space between columns */
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .left-column, .right-column {
+    width: 45%; /* Adjust width as needed */
+  }
+  .section-title {
+    font-size: 32px;
+    font-weight: 700;
+    color: #000;
+    margin-bottom: 20px;
+  }
+  .section-text {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #2b2b2b;
+    text-align: left;
+  }
+  .section-subtitle {
+    font-size: 24px;
+    color: #6c6c6c;
+    margin-bottom: 20px;
+  }
+  .chart {
+    width: 100%;
+    height: 400px; /* Adjust height as needed */
+    background: url('img/chart.png') no-repeat center center;
+    background-size: contain; /* Adjust background size as needed */
+  }
+
 /*CHART1*/
         section.backgroundmade {
             width: auto;
