--- a/style.css
+++ b/style.css
@@ -1017,7 +1017,65 @@ section.chartintro {
                 margin-top: 10px; /* Add margin between images and text */
             }
         }
+        /*USERPERSONA*/
+        .section.userpersona {
+            width: 110%;
+            height: 110%;
+            z-index: -1; /* Lower z-index to stay behind other sections */
+            position: absolute;
+       /
+        }
+        .persona img{
+            width:100%;
+            height: auto;
+            margin-left:0%;
+        }
+        .personab img{
+            width:48%;
+            height: auto;
+            margin-left:53%;
+            margin-bottom:100px;
+        }
+        
+      
 
+        /* hirophone*/
+        
+        .section.hirophone {
+            width: 110%;
+            height: 110%;
+            background-image: url('img/hirophone.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            z-index: 1; /* Lower z-index to stay behind other sections */
+            position: absolute;
+            top: 0;
+            left: 0;
+            transition: transform 6.0s ease; /* Smooth transition for movement */
+            opacity: 1; /* Initially visible */
+            pointer-events: auto; /* Enable interaction */
+        }
+        .hirophone img{
+            width:100%;
+            height: auto;
+            margin-left: 0%;
+            margin-bottom:-10px;
+        }
+        /*design*/
+        .design img{
+            width:100%;
+            height: auto;
+            margin-left: 0%;
+        }
+        .section.design {
+            width: 110%;
+            height: 110%;
+            left: 0;
+            transition: transform 6.0s ease; /* Smooth transition for movement */
+            opacity: 1; /* Initially visible */
+            pointer-events: auto; /* Enable interaction */
+        }
     /*FOOTER*/
     footer {
         width: 105%;
@@ -1038,7 +1096,7 @@ section.chartintro {
         width: 300px;
         height: auto;
         margin-left: 5px;
-        margin-right: 30px;
+        margin-right: 80px;
     }
     footer p {
         margin: 40px 100px;
